--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -115,7 +115,7 @@
             <th class="text-right" scope="">
               <!-- <input currencyMask [options]="{ thousands: ',', decimal: '.' }" disabled [value]="item.valorUnitario"
                 type="text" name="valorUnitario" maxlength="20" class="form-control"> -->
-              <div class="valor-curency">{{ item.valorUnitario | currency: '$' }}</div>
+              <div class="valor-curency">{{ item.valorUnitario | currency: '$':'symbol':'1.2-2':'en' }}</div>
             </th>
             <th scope="" class="text-center">
               <input appNumbersOnly disabled [value]="item.cantidad" type="text" name="cantidad" maxlength="10"
@@ -124,7 +124,7 @@
             <th class="text-right" scope="">
               <!-- <input currencyMask [options]="{ thousands: ',', decimal: '.' }" disabled [value]="item.importe"
                   type="text" name="importe" maxlength="20" class="form-control" readonly> -->
-              <div class="valor-curency">{{ item.importe | currency: '$' }}</div>
+              <div class="valor-curency">{{ item.importe | currency: '$':'symbol':'1.2-2':'en' }}</div>
             </th>
             <th scope="">
               <select2 [data]="lista_monedas" [options]="{placeholder: 'Seleccione Moneda... '}" disabled
@@ -143,7 +143,7 @@
             <th class="text-right" scope="">
               <!-- <input currencyMask [options]="{ thousands: ',', decimal: '.' }" disabled [value]="item.monto_rembolsar"
                 type="text" name="linea_detalle" maxlength="20" class="form-control"> -->
-              <div class="valor-curency">{{ item.monto_rembolsar | currency: '$' }}</div>
+              <div class="valor-curency">{{ item.monto_rembolsar | currency: '$':'symbol':'1.2-2':'en' }}</div>
             </th>
 
             <th class="text-center" scope="">
