--- a/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
+++ b/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
@@ -43,7 +43,7 @@
               </td>
               <td>
                 <div style="text-align: right;">
-                  {{ item.monto_reembolsar | currency: '$'}}
+                  {{ item.monto_reembolsar | currency: '$':'symbol':'1.2-2':'en'}}
                 </div>
               </td>
               <td>{{ item.nombre_moneda}}</td>
