--- a/src/app/modulos/carga-documentos/detalle-oc-mx/detalle-oc-mx.component.html
+++ b/src/app/modulos/carga-documentos/detalle-oc-mx/detalle-oc-mx.component.html
@@ -15,7 +15,7 @@
         <strong>TIPO DE CAMBIO: {{ orden_oc.tipo_cambio }} </strong>
       </div>
       <div class="col-lg-6 col-xl-4 mt-1">
-        <strong>MONTO: {{ orden_oc.total | currency:'$' }} {{ orden_oc.moneda }} </strong>
+        <strong>MONTO: {{ orden_oc.total | currency: '$':'symbol':'1.2-2':'en' }} {{ orden_oc.moneda }} </strong>
       </div>
       <!-- <div class="col-lg-6 col-xl-4 mt-1">
         <strong>MONTO ANTICIPO: {{ orden_oc.importe_anticipo |  currency:'$' }} {{ orden_oc.moneda }} </strong>
