--- a/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.html
+++ b/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.html
@@ -43,7 +43,7 @@
               <td class="align-middle no-wraptext">{{ codigo.fecha_documento | date:'yyyy-MMM-dd' }}</td>
               <td class="align-middle no-wraptext">{{ codigo.fecha_contable | date:'yyyy-MMM-dd' }}</td>
               <td class="align-middle">{{ codigo.movimiento }}</td>
-              <td class="align-middle text-right">{{ codigo.monto | currency: '$' }} </td>
+              <td class="align-middle text-right">{{ codigo.monto | currency: '$':'symbol':'1.2-2':'en' }} </td>
               <td class="align-middle">{{ codigo.activo == 1 ? 'Activo' : 'Inactivo' }}</td>
               <td class="align-middle text-right"> <button class="btn btn-primary"
                   (click)="verDetalles($event, codigo.id)"> <i class="fas fa-file mr-1"></i> Ver
