--- a/src/app/compartidos/tabla-conceptos-agregados-rd/tabla-conceptos-agregados-rd.component.html
+++ b/src/app/compartidos/tabla-conceptos-agregados-rd/tabla-conceptos-agregados-rd.component.html
@@ -14,10 +14,10 @@
     <tr *ngFor="let item of conceptosAgregados">
       <th class="text-center" scope="row"> {{ item.cantidad }} </th>
       <th class="text-center" scope="row"> {{ item.concepto }} </th>
-      <th class="text-center" scope="row"> {{ item.valor_unitario | currency:'$' }} </th>
+      <th class="text-center" scope="row"> {{ item.valor_unitario | currency: '$':'symbol':'1.2-2':'en' }} </th>
       <th class="text-center" scope="row"> {{ item.impuestos[0].clave }} </th>
       <th class="text-center" scope="row"> {{ item.monto_impuesto |currency:'$' }} </th>
-      <th class="text-center" scope="row"> {{ item.importe | currency:'$' }} </th>
+      <th class="text-center" scope="row"> {{ item.importe | currency: '$':'symbol':'1.2-2':'en' }} </th>
       <th class="text-center" scope="row"> <button class="btn btn-danger" (click)="eliminar(item)"> <em
             class="fas fa-trash"></em> </button>
       </th>
