--- a/src/app/modulos/carga-documentos/carga-documentos-cr/saldos-oc/saldos-oc.component.html
+++ b/src/app/modulos/carga-documentos/carga-documentos-cr/saldos-oc/saldos-oc.component.html
@@ -11,29 +11,29 @@
         <tr>
           <td class="tdpaddign1">Monto OC</td>
           <td class="tdpaddign1" style="text-align: right">
-            {{ saldos.monto_oc |  currency:'$' }} {{ orden_compra.moneda }} </td>
+            {{ saldos.monto_oc | currency:'$' }} {{ orden_compra.moneda }} </td>
         </tr>
         <tr>
           <td class="tdpaddign1">Monto Anticipo</td>
           <td class="tdpaddign1" style="text-align: right">
-            {{ saldos.monto_anticipo | currency:'$' }} {{ orden_compra.moneda }} </td>
+            {{ saldos.monto_anticipo | currency: '$':'symbol':'1.2-2':'en' }} {{ orden_compra.moneda }} </td>
         </tr>
         <tr>
           <td class="tdpaddign1">Montos OC </td>
           <td class="tdpaddign1" style="text-align: right">
-            {{ saldos.total_montos_cr |  currency:'$' }} {{ orden_compra.moneda }} </td>
+            {{ saldos.total_montos_cr | currency:'$' }} {{ orden_compra.moneda }} </td>
         </tr>
         <tr>
           <td class="tdpaddign1">Montos Nota Crédito </td>
           <td class="tdpaddign1" style="text-align: right">
-            {{ saldos.total_montos_nc |  currency:'$' }} {{ orden_compra.moneda }} </td>
+            {{ saldos.total_montos_nc | currency:'$' }} {{ orden_compra.moneda }} </td>
         </tr>
         <tr>
           <td class="tdpaddign1">Saldo Pendiente </td>
           <td class="tdpaddign1" style="text-align: right"
             [ngClass]="{'text-success': saldos.saldo_pendiente > 0, 'text-danger': saldos.saldo_pendiente < 0 }">
 
-            {{ saldos.saldo_pendiente |  currency:'$' }} {{ orden_compra.moneda }} </td>
+            {{ saldos.saldo_pendiente | currency:'$' }} {{ orden_compra.moneda }} </td>
         </tr>
       </tbody>
     </table>
