--- a/src/app/modulos/carga-documentos/modal-docs-relacionados/modal-docs-relacionados.component.html
+++ b/src/app/modulos/carga-documentos/modal-docs-relacionados/modal-docs-relacionados.component.html
@@ -31,7 +31,7 @@
               <td>{{ cfdi.version }}</td>
               <td>{{ cfdi.folio }}</td>
               <td>{{ cfdi.serie }}</td>
-              <td>{{ cfdi.subtotal | currency: '$' }}</td>
+              <td>{{ cfdi.subtotal | currency: '$':'symbol':'1.2-2':'en' }}</td>
               <td class="no-wraptext">
                 <a *ngIf="cfdi.pdf !== ''" target="_blank" [href]="cfdi.pdf" class="btn"> <i
                     class="far fa-file-pdf"></i> </a>
