--- a/src/app/modulos/usuarios/modal-prestacion-rci/modal-prestacion-rci.component.html
+++ b/src/app/modulos/usuarios/modal-prestacion-rci/modal-prestacion-rci.component.html
@@ -21,23 +21,21 @@
             <tbody>
               <tr *ngFor="let prestacion of lista_prestaciones">
                 <td>
-                  <input type="checkbox" class="mr-1 " checked  (change)="eliminarSaldo($event, prestacion)" id="prestacion" name="prestacion">
+                  <input type="checkbox" class="mr-1 " checked (change)="eliminarSaldo($event, prestacion)"
+                    id="prestacion" name="prestacion">
                   <label for="prestacion"> {{prestacion.nombre_prestacion}} </label>
                 </td>
                 <td>
-                  <a href="#" id="{{prestacion.id}}_montoinicial" class='editable'
-                    data-type="text"  data-title="Saldo inicial"
-                    e-maxlength='10' >
-                    {{prestacion.monto_inicial | currency:'$' }}
+                  <a href="#" id="{{prestacion.id}}_montoinicial" class='editable' data-type="text"
+                    data-title="Saldo inicial" e-maxlength='10'>
+                    {{prestacion.monto_inicial | currency: '$':'symbol':'1.2-2':'en' }}
                   </a>
                 </td>
                 <td>
-                  <a href="#"
-                    class='editable' id="{{prestacion.id}}_montodisponible"
-                     data-type="text"  data-title="Saldo disponible"
-                     e-maxlength='10' >
-                     {{prestacion.monto_disponible | currency:'$' }}
-                    </a>
+                  <a href="#" class='editable' id="{{prestacion.id}}_montodisponible" data-type="text"
+                    data-title="Saldo disponible" e-maxlength='10'>
+                    {{prestacion.monto_disponible | currency: '$':'symbol':'1.2-2':'en' }}
+                  </a>
                 </td>
               </tr>
             </tbody>
